--- a/app/views/fields/list/_form.html.erb
+++ b/app/views/fields/list/_form.html.erb
@@ -2,23 +2,24 @@
   <%= f.label field.attribute %>
 </div>
 <div class="field-unit__field">
-  <%= f.hidden_field field.attribute %>
 
   <% _group_id = "gid_#{SecureRandom.alphanumeric}" %>
-  <% field.values.each do |v| %>
 
+  <% field.values.each do |v| %>
     <%= text_field_tag(
         nil,
         v,
+        name: "#{f.object_name}[#{field.attribute}][]",
         class: _group_id,
     )
     %>
 
   <% end %>
 
-  <%= text_field_tag(
+  <% text_field_tag(
       nil,
       '',
+      name: "#{f.object_name}[#{field.attribute}][]",
       class: _group_id,
     )
   %>
@@ -31,20 +32,16 @@
 
 <script>
   (function() {
-    var hiddens = document.querySelectorAll('input[type=hidden]');
-    var hidden = hiddens[hiddens.length - 1];
     var group_selector = '.<%= _group_id %>'
+    var $f = $(group_selector).parents('form');
 
     document.addEventListener("DOMContentLoaded", function(evt) {
 
-      var $f = $(hidden).parents('form');
       $f.on('submit', function() {
-        var vals = $(group_selector).map(function() {
-          return $(this).val();
-        }).toArray();
-        vals = vals.filter(function(v) { return v !== '' && v != null });
-
-        $(hidden).val(JSON.stringify(vals));
+        // Filter empty fileds before submit
+        $(group_selector).filter(function() {
+          return !this.value;
+        }).removeAttr('name');
       });
     });
   })()
