--- a/app/views/fields/list/_form.html.erb
+++ b/app/views/fields/list/_form.html.erb
@@ -16,7 +16,7 @@
 
   <% end %>
 
-  <% text_field_tag(
+  <%= text_field_tag(
       nil,
       '',
       name: "#{f.object_name}[#{field.attribute}][]",
